--- a/examples/remix/src/layouts/index.less
+++ b/examples/remix/src/layouts/index.less
@@ -9,7 +9,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 50%;
+  --gutter: 16px;
+  width: 1024px;
+  max-width: calc(100% - var(--gutter) * 2);
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
