feat(plugin-docs): sidebar data

--- a/packages/plugin-docs/client/theme-doc/tailwind.out.css
+++ b/packages/plugin-docs/client/theme-doc/tailwind.out.css
@@ -506,6 +506,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 1rem;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .flex {
   display: flex;
 }
@@ -562,6 +566,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .filter {
