chore: code style (#293)
* chore: code style

* chore: prettier ignore wailwind outcss

--- a/examples/with-valtio/style.css
+++ b/examples/with-valtio/style.css
@@ -27,7 +27,7 @@ button {
   width: 96px;
   margin: 0 16px;
   cursor: pointer;
-  transition: background-color .15s;
+  transition: background-color 0.15s;
   border-radius: 12px;
 }
 
