feat(plugin-docs): Added dark mode (#302)
* feat(plugin-docs): Added dark mode

* feat(plugin-docs): Fixed some component not support dark mode

--- a/packages/plugin-docs/client/theme-doc/tailwind.css
+++ b/packages/plugin-docs/client/theme-doc/tailwind.css
@@ -3,56 +3,56 @@
 @tailwind utilities;
 
 article h1 {
-  @apply text-4xl font-bold tracking-tight mt-2 my-4;
+  @apply text-4xl font-bold tracking-tight mt-2 my-4 dark:text-white;
 }
 
 article h2 {
-  @apply text-3xl font-semibold tracking-tight mt-10;
+  @apply text-3xl font-semibold tracking-tight mt-10 dark:text-white;
   @apply pb-1 border-b;
 }
 
 article h3 {
-  @apply text-2xl font-semibold tracking-tight mt-8;
+  @apply text-2xl font-semibold tracking-tight mt-8 dark:text-white;
 }
 
 article h4 {
-  @apply text-xl font-semibold tracking-tight mt-8;
+  @apply text-xl font-semibold tracking-tight mt-8 dark:text-white;
 }
 
 article h5 {
-  @apply text-lg font-semibold tracking-tight mt-8;
+  @apply text-lg font-semibold tracking-tight mt-8 dark:text-white;
 }
 
 article h6 {
-  @apply text-base font-semibold tracking-tight mt-8;
+  @apply text-base font-semibold tracking-tight mt-8 dark:text-white;
 }
 
 article p {
-  @apply text-base font-light leading-8 mt-4 text-gray-700;
+  @apply text-base font-light leading-8 mt-4 text-gray-700 dark:text-white;
 }
 
 article ul {
-  @apply list-disc ml-6 mt-6;
+  @apply list-disc ml-6 mt-6 dark:text-white;
 }
 
 article li {
-  @apply mt-2;
+  @apply mt-2 dark:text-white;
 }
 
 article ol {
-  @apply list-decimal ml-6 mt-6;
+  @apply list-decimal ml-6 mt-6 dark:text-white;
 }
 
 article blockquote {
-  @apply italic pl-6 border-l-2 border-gray-300 text-gray-700;
+  @apply italic pl-6 border-l-2 border-gray-300 text-gray-700 dark:text-white;
 }
 
 article h2 a {
-  @apply no-underline;
+  @apply no-underline dark:text-white;
 }
 
 article code {
-  @apply bg-black bg-opacity-5 border border-black border-opacity-5 rounded-md;
+  @apply bg-black bg-opacity-5 border border-black border-opacity-5 rounded-md dark:text-white;
   font-size: 0.9em;
   padding: 2px 0.25em;
   box-decoration-break: clone;
@@ -60,31 +60,31 @@ article code {
 }
 
 article inlinecode {
-  @apply bg-black bg-opacity-5 border border-black border-opacity-5 rounded-md px-1.5 py-0.5 text-xs;
+  @apply bg-black bg-opacity-5 border border-black border-opacity-5 rounded-md px-1.5 py-0.5 text-xs dark:text-white dark:bg-gray-700;
 }
 
 article pre {
   /* content-visibility: auto; */
   contain: paint;
-  @apply p-4 bg-slate-100 rounded-xl my-8 overflow-x-auto font-medium subpixel-antialiased;
+  @apply p-4 bg-slate-100 dark:bg-slate-800 rounded-xl my-8 overflow-x-auto font-medium subpixel-antialiased dark:text-white;
 }
 
 article pre code {
   line-height: 1.25rem;
-  @apply relative p-0 text-sm text-current bg-transparent rounded-none border-none inline-block min-w-full;
+  @apply relative p-0 text-sm text-current bg-transparent rounded-none border-none inline-block min-w-full dark:text-white;
 }
 
 article pre code .line.highlighted {
-  @apply before:block before:absolute before:h-5 before:bg-gray-500 before:bg-opacity-10 before:-inset-x-4 before:pointer-events-none before:select-none;
+  @apply before:block before:absolute before:h-5 before:bg-gray-500 before:bg-opacity-10 before:-inset-x-4 before:pointer-events-none before:select-none dark:text-white;
 }
 
 article a code {
-  @apply text-current no-underline;
+  @apply text-current no-underline dark:text-white;
 }
 
 article a {
-  @apply text-blue-600 mx-1 hover:text-blue-300 transition;
-  background-image: linear-gradient(#fff 60%, rgba(130, 199, 255, 0.28) 55%);
+  @apply text-blue-600 mx-1 hover:text-blue-300 transition dark:text-blue-400;
+  background-image: linear-gradient(transparent 60%, rgba(130, 199, 255, 0.28) 55%);
 }
 
 /*article pre {*/
