--- a/packages/plugin-docs/client/theme-doc/tailwind.css
+++ b/packages/plugin-docs/client/theme-doc/tailwind.css
@@ -104,3 +104,12 @@ article hr {
     transparent 100%
   );
 }
+
+html {
+  scroll-behavior: smooth
+}
+
+/** Anchor with offset for headings */
+h1, h2, h3, h4, h5, h6 {
+  scroll-margin-top: 3em;
+}
