feat(plugin-docs): Fixed dynamic anchor bugs (#360)
* feat(plugin-docs): Added hash anchor in first load for new mdx compiler

* feat(plugin-docs): Fixed anchor offset bug caused by <Announcement />

--- a/packages/plugin-docs/client/theme-doc/firefox-polyfill.css
+++ b/packages/plugin-docs/client/theme-doc/firefox-polyfill.css
@@ -11,8 +11,9 @@
   .g-glossy-firefox-cover {
     display: block;
     position: fixed;
+    top: var(--anchor-offset);
     width: 100%;
-    height: 100px;
+    height: 72px;
     z-index: 22;
     background-color: white;
   }
@@ -21,7 +22,8 @@
     display: block;
     position: fixed;
     width: 100%;
-    height: 100px;
+    top: var(--anchor-offset);
+    height: 72px;
     z-index: 24;
     background: -moz-element(#article-body) no-repeat top;
     filter: blur(10px);
