fix(docs): fix color behavior of Message component (#402)

--- a/packages/plugin-docs/client/theme-doc/firefox-polyfill.css
+++ b/packages/plugin-docs/client/theme-doc/firefox-polyfill.css
@@ -3,7 +3,8 @@
   https://www.cnblogs.com/coco1s/p/14953143.html
 */
 
-.g-glossy-firefox, .g-glossy-firefox-cover {
+.g-glossy-firefox,
+.g-glossy-firefox-cover {
   display: none;
 }
 
