--- a/packages/plugin-docs/client/theme-doc/firefox-polyfill.css
+++ b/packages/plugin-docs/client/theme-doc/firefox-polyfill.css
@@ -12,9 +12,9 @@
   .g-glossy-firefox-cover {
     display: block;
     position: fixed;
-    top: var(--anchor-offset);
+    top: 0;
     width: 100%;
-    height: 72px;
+    height: calc(var(--anchor-offset) + 72px);
     z-index: 22;
     background-color: white;
   }
@@ -23,8 +23,8 @@
     display: block;
     position: fixed;
     width: 100%;
-    top: var(--anchor-offset);
-    height: 72px;
+    top: 0;
+    height: calc(var(--anchor-offset) + 72px);
     z-index: 24;
     background: -moz-element(#article-body) no-repeat top;
     filter: blur(10px);
