feat(plugin-docs): Add color-scheme support (#865)
Co-authored-by: 陈梓聪 <20804846@dw.gdbbk.com>

--- a/packages/plugin-docs/client/theme-doc/tailwind.css
+++ b/packages/plugin-docs/client/theme-doc/tailwind.css
@@ -208,6 +208,8 @@ html {
 
 :root {
   --anchor-offset: 28px;
+
+  color-scheme: var(--color-scheme, light dark);
 }
 
 /** Anchor with offset for headings */
