fix(plugin-docs): 🐛 默认主题值为 light (#903)
Co-authored-by: pshu <pishu.spf@antfin.com>

--- a/packages/plugin-docs/client/theme-doc/tailwind.css
+++ b/packages/plugin-docs/client/theme-doc/tailwind.css
@@ -209,7 +209,7 @@ html {
 :root {
   --anchor-offset: 28px;
 
-  color-scheme: var(--color-scheme, light dark);
+  color-scheme: var(--color-scheme, light);
 }
 
 /** Anchor with offset for headings */
