--- a/packages/plugin-docs/client/theme-doc/tailwind.css
+++ b/packages/plugin-docs/client/theme-doc/tailwind.css
@@ -340,4 +340,8 @@ h6 {
   .mdx-message-error code {
     @apply text-red-700 dark:text-rose-100;
   }
+
+  .article-meta > div:nth-child(even) {
+    @apply justify-start md:justify-end;
+  }
 }
