chore: prettier 2.7, cache and format

--- a/docs/components/Features/Features.css
+++ b/docs/components/Features/Features.css
@@ -51,18 +51,18 @@
 
 .feature h3 {
   font-size: 20px;
-  color: #2A445D;
+  color: #2a445d;
   margin-bottom: 12px;
   text-align: center;
 }
 :global(.dark) .feature h3 {
-  color: rgba(255, 255, 255, .8);
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .feature p {
   font-size: 18px;
-  color: #4A5E71;
+  color: #4a5e71;
 }
 :global(.dark) .feature p {
-  color: rgba(255, 255, 255, .6);
+  color: rgba(255, 255, 255, 0.6);
 }
