--- a/docs/components/Contributing/Contributing.css
+++ b/docs/components/Contributing/Contributing.css
@@ -5,14 +5,14 @@
 
 .normal p {
   font-size: 18px;
-  color: #4A5E71;
+  color: #4a5e71;
   margin-bottom: 16px;
 }
 
 :global(.dark) .normal p {
-  color: rgba(255, 255, 255, .8);
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .normal p a {
-  color: #0273DC;
+  color: #0273dc;
 }
