--- a/docs/components/Footer/NewsLetterForm.css
+++ b/docs/components/Footer/NewsLetterForm.css
@@ -3,8 +3,8 @@
   margin-bottom: 14px;
 }
 .normal input {
-  background: #FFFFFF;
-  border: 1px solid #BAC1C8;
+  background: #ffffff;
+  border: 1px solid #bac1c8;
   width: 180px;
   font-size: 14px;
   height: 28px;
@@ -14,14 +14,24 @@
 
 .normal button {
   font-size: 14px;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-left: 14px;
-  background-image: linear-gradient(224deg, #0071DA 0%, #1890FF 100%, #1890FF 100%);
+  background-image: linear-gradient(
+    224deg,
+    #0071da 0%,
+    #1890ff 100%,
+    #1890ff 100%
+  );
   height: 28px;
   line-height: 28px;
   padding: 0 10px;
 }
 
 .normal button:hover {
-  background-image: linear-gradient(224deg, #48a4fe 0%, #6fbafe 100%, #8dc9ff 100%);
+  background-image: linear-gradient(
+    224deg,
+    #48a4fe 0%,
+    #6fbafe 100%,
+    #8dc9ff 100%
+  );
 }
