--- a/docs/components/SectionHeader/SectionHeader.css
+++ b/docs/components/SectionHeader/SectionHeader.css
@@ -1,4 +1,3 @@
-
 .normal {
   display: flex;
   margin-bottom: 40px;
@@ -6,18 +5,18 @@
 
 .normal div {
   flex: 1;
-  border-top: 1px solid #EBF0F4;
+  border-top: 1px solid #ebf0f4;
   height: 1px;
   margin-top: 18px;
 }
 
 .normal h2 {
   font-size: 26px;
-  color: #2A445D;
+  color: #2a445d;
   text-align: center;
   padding: 0 20px;
 }
 
 :global(.dark) .normal h2 {
-  color: rgba(255, 255, 255, .7);
+  color: rgba(255, 255, 255, 0.7);
 }
