--- a/packages/preset-umi/devToolAppDist/458.chunk.css
+++ b/packages/preset-umi/devToolAppDist/458.chunk.css
@@ -1,1 +1,7 @@
-.nav___BBTh0 div{display:inline-block;margin-right:20px}.nav___BBTh0 a{color:green}
+.nav___BBTh0 div {
+  display: inline-block;
+  margin-right: 20px;
+}
+.nav___BBTh0 a {
+  color: green;
+}
